--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
     environment:
       - CLEANERBOT_TOKEN=${CLEANERBOT_TOKEN1}
+    ports:
+      - "8087:8087"
   clb2:
     restart: always
     image: a891/cleanerbot:latest
