--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -4,3 +4,5 @@ services:
         build: ..
         environment:
             - CLEANERBOT_TOKEN=${CLEANERBOT_TOKEN}
+        ports:
+            - "8087:8087"
