--- a/.github/workflows/host-manager.yml
+++ b/.github/workflows/host-manager.yml
@@ -24,8 +24,11 @@ jobs:
         name: Compile Windows
         run: deno compile --output host-manager-windows-x86_64 --target x86_64-pc-windows-msvc --unstable --allow-read --allow-write --allow-net ./host-manager/index.ts
       -
-        name: Compile Apple Darwin
+        name: Compile Apple Darwin (x86_64)
         run: deno compile --output host-manager-darwin-x86_64 --target x86_64-apple-darwin --unstable --allow-read --allow-write --allow-net ./host-manager/index.ts
+      -
+        name: Compile Apple Darwin (aarch64)
+        run: deno compile --output host-manager-darwin-x86_64 --target aarch64-apple-darwin --unstable --allow-read --allow-write --allow-net ./host-manager/index.ts
       - 
         name: Release to Github
         uses: softprops/action-gh-release@v1
@@ -34,5 +37,6 @@ jobs:
             host-manager-linux-x86_64
             host-manager-windows-x86_64.exe
             host-manager-darwin-x86_64
+            host-manager-darwin-aarch64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
